--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/anatomy": "^2.2.2",
+    "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
-    "@mui/material": "^6.0.2",
     "firebase": "^10.13.0",
+    "framer-motion": "^11.5.4",
     "i18next": "^23.14.0",
     "next": "14.2.7",
     "react": "^18",
